<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UEM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Suman Kumar Dey</string>
    <string name="nav_header_subtitle">sumankumar.dey2023@uem.edu.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Set My Password</string>
    <string name="menu_gallery">Upload My Photo</string>
    <string name="menu_slideshow">Digital Library Resources</string>
    <string name="organization_s_calender">Organization\'s Calender</string>
    <string name="payment_details">Payment Details</string>
    <string name="dues_pay_fees"><![CDATA[Dues & pay Fees]]></string>
    <string name="update_project"><![CDATA[Update Information & Project]]></string>
    <string name="university_marks_system">University Marks System</string>
    <string name="sem_feedback">Sem Feedback</string>
    <string name="exam_form">Exam Form</string>
    <string name="admit_card">Admit Card</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="info">Welcome SUMAN KUMAR DEY, using College Resource planning, Your Computer No is :14.195.19.210, 172.69.178.195</string>
    <string name="info2">Please change default password for security-using set My Password</string>
    <string name="please_upload_your_official_passport_size_photo_in_jpg_format_less_than_30kb_update_parsonal_data_by_clicking"><![CDATA[Please upload your official passport size photo .jpg format(size less than 30KB) & update personal data by clicking Update/Display My Information]]></string>
    <string name="hostel"><![CDATA[Also staying in hostels will help the students to access teaching resources, computing & lab resources, library, licensed software, high speed internet, etc.,]]></string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="coll"><![CDATA[You are the student of B.Tech, CSE & Weekly Time Table of Semester:3, Sec:A & Class Roll No:34. Your registration no is:204202300200048]]></string>
    <string name="mon">Mon</string>
    <string name="esc301">ESC301</string>
    <string name="hsmc301">HSMC301</string>
    <string name="esc302">ESC302</string>
    <string name="bsc301">BSC301</string>
    <string name="pcccs391">PCCCS391</string>
    <string name="tue">Tue</string>
    <string name="pcccs302">PCCCS302</string>
    <string name="pcccs301">PCCCS301</string>
    <string name="hsmc302">HSMC302</string>
    <string name="hsmc382">HSMC382</string>
    <string name="esc392">ESC392</string>
    <string name="wed">Wed</string>
    <string name="bsc3011">BSC301</string>
    <string name="esc3011">ESC301</string>
    <string name="esc3021">ESC302</string>
    <string name="pcccs3011">PCCCS301</string>
    <string name="esc3912">ESC391</string>
    <string name="thu1">Thu</string>
    <string name="hsmc3012">HSMC301</string>
    <string name="bsc3012">BSC301</string>
    <string name="hsmc3822">HSMC382</string>
    <string name="hsmc3021">HSMC302</string>
    <string name="pcccs3921">PCCCS392</string>
    <string name="fri2">Fri</string>
    <string name="pcc3013">PCC301</string>
    <string name="bsc3013">BSC301</string>
    <string name="hsmc3824">HSMC382</string>
    <string name="hsmc3024">HSMC302</string>
    <string name="coding">CODING</string>
    <string name="line">___________________________________________________________________</string>
    <string name="student_information">Student Information</string>
    <string name="click_here_for_display_edit_add_new_certificate">Click here for Display Edit/Add New Certificate</string>
    <string name="note_please_do_not_use_following_characters">Note: Please do not use following characters</string>
    <string name="sign"><![CDATA[+,?, %,, <,>,=,`,~]]></string>
    <string name="college_enrol_no">College Enrol.No</string>
    <string name="_12023002001040">12023002001040</string>
    <string name="not_editable">*Not Editable</string>
    <string name="university_registration_no">University Registration No</string>
    <string name="_204202300200048">204202300200048</string>
    <string name="not_editable1">*Not Editable</string>
    <string name="examination_roll_no">Examination Roll No</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="suman_kumar_dey">SUMAN KUMAR DEY</string>
    <string name="stream">Stream</string>
    <string name="course">Course</string>
    <string name="b_tech">B.Tech</string>
    <string name="student_s_mobile_no_sms">Student\'s Mobile No.(SMS)</string>
    <string name="_9476176172">9476176172</string>
    <string name="all_the_information_will_be_sent_to_this_mobile_no">-All the information will be sent to this mobile no</string>
    <string name="student_s_e_mail">Student\'s E-Mail :</string>
    <string name="skdeyofficial2003_gmail_com">skdeyofficial2003@gmail.com</string>
    <string name="guardian_mobile_no_sms">Guardian Mobile No.(SMS)</string>
    <string name="_9476304388">9476304388</string>
    <string name="full_local_address">Full Local Address</string>
    <string name="gandhinagar_panchbaga_bankura_i">GANDHINAGAR,PANCHBAGA BANKURA-I</string>
    <string name="district">District</string>
    <string name="bankura">BANKURA</string>
    <string name="pin_code">Pin Code</string>
    <string name="_722102">722102</string>
    <string name="state">State</string>
    <string name="west_bengal">WEST BENGAL</string>
    <string name="country">Country</string>
    <string name="india">India</string>
    <string name="res_ph">Res.Ph</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="write_only_m_or_f">Write only M or F</string>
    <string name="blood_group">Blood Group</string>
    <string name="a">A+</string>
    <string name="a1">A-</string>
    <string name="b">B+</string>
    <string name="b1">B-</string>
    <string name="ab">AB+</string>
    <string name="ab1">AB-</string>
    <string name="o">O+</string>
    <string name="o1">O-</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_2003_11_11" tools:ignore="TypographyDashes">2003–11-11</string>
    <string name="format_yyyy_mm_dd_ex_1997_04_14" tools:ignore="TypographyDashes">(Format : YYYY–MM–DD EX.1997–04-14)</string>
    <string name="year_of_admission">Year of Admission</string>
    <string name="_2023">2023</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="kartick_chandra_dey">Kartick Chandra Dey</string>
    <string name="father_s_email">Father\'s Email</string>
    <string name="kcdey1967_gmail_com">kcdey1967@gmail.com</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="pratima_dey">Pratima Dey</string>
    <string name="other_s_email">other\'s Email</string>
    <string name="deypratima51_gmail_com">deypratima51@gmail.com</string>
    <string name="same_as_local_address">Same as local address</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="gandhinagar_panchbaga_bankura_i1">GANDHINAGAR PANCHBAGA BANKURA-I</string>
    <string name="pin_code1">Pin Code</string>
    <string name="_7221021">722102</string>
    <string name="state1">State</string>
    <string name="west_bengal1">WEST BENGAL</string>
    <string name="country1">Country</string>
    <string name="india1">India</string>
    <string name="permanent_address_ph_no">Permanent Address Ph. No.</string>
    <string name="_94763043881">9476304388</string>
    <string name="father_guardian_telephone_no_office">Father/Guardian Telephone No(Office)</string>
    <string name="_0">0</string>
    <string name="guardian_s_email">Guardian\'s Email</string>
    <string name="kcdey1967_gmail_com1">kcdey1967@gmail.com</string>
    <string name="guardian_s_name">Guardian\'s Name</string>
    <string name="kartick_chandra_dey1">KARTICK CHANDRA DEY</string>
    <string name="relation1">Relation</string>
    <string name="father">FATHER</string>
    <string name="rank">Rank</string>
    <string name="_01">0</string>
    <string name="school_college_information">School/College Information</string>
    <string name="class_10_percentage">Class 10 percentage(%)</string>
    <string name="_89_5">89.5</string>
    <string name="year_of_passing">Year of Passing</string>
    <string name="_2020">2020</string>
    <string name="name_of_board">Name of Board</string>
    <string name="wbbse">WBBSE</string>
    <string name="school_name">School Name</string>
    <string name="kenduadihi_boys_high_school">KENDUADIHI BOYS HIGH SCHOOL</string>
    <string name="hs_class_12_percentage">HS /Class 12 percentage(%)</string>
    <string name="_67_6">67.6</string>
    <string name="year_of_passing1">Year of Passing</string>
    <string name="_2022">2022</string>
    <string name="board">Board</string>
    <string name="wbchse">WBCHSE</string>
    <string name="school">School</string>
    <string name="kenduadihi_boys_high_school1">KENDUADIHI BOYS HIGH SCHOOL</string>
    <string name="other_diploma">Other/Diploma</string>
    <string name="na">NA</string>
    <string name="year_of_passing12">Year of Passing</string>
    <string name="_012">0</string>
    <string name="board_university">Board/University</string>
    <string name="na1">NA</string>
    <string name="name_of_institution">Name of Institution</string>
    <string name="na12">NA</string>
    <string name="note_certificate_must_be_produced_for_sc_st_obc_minority">Note: Certificate must be produced for SC/ST/OBC/MINORITY</string>
    <string name="update">Update</string>
    <string name="st">ST</string>
    <string name="sc">SC</string>
    <string name="obc">OBC</string>
    <string name="general">General</string>
    <string name="guardian_s_pan">Guardian\'s PAN</string>
    <string name="wing_7">Wing-7</string>
    <string name="wing_6">Wing-6</string>
    <string name="wing_5">Wing-5</string>
    <string name="wing_4">Wing-4</string>
    <string name="wing_3">Wing-3</string>
    <string name="wing_2">Wing-2</string>
    <string name="wing_1">Wing-1</string>
    <string name="dayscholer">DayScholer</string>
    <string name="hostel_name">Hostel Name</string>
    <string name="guardian_s_pan1">Guardian\'s PAN</string>
    <string name="_310726414913">310726414913</string>
    <string name="aadhar_no">Aadhar No</string>
    <string name="_0_0">0.0</string>
    <string name="percentage">percentage(%)</string>
    <string name="calender">Calender</string>
    <string name="please_pay_your_exam_fees_and_generate_admit_card_or_after_fill_up_the_exam_form_you_will_get_the_admit_with_in_24_hrs">Please pay your exam fees and generate admit card or After fill-up the exam form you will get the admit with in 24 hrs</string>
    <string name="print">Print</string>
</resources>